test/Fail/AmbiguousName.err
AmbiguousName.agda:14.5-8: error: [AmbiguousName]
Ambiguous name A.X. It could refer to any one of
  B.A.X bound at
    AmbiguousName.agda:6.15-16
  Y bound at AmbiguousName.agda:9.13-14
A.X is in scope as
  * a postulate AmbiguousName.B.A.X brought into scope by
    - its definition at AmbiguousName.agda:6.15-16
  * a postulate AmbiguousName.A.X brought into scope by
    - its definition at AmbiguousName.agda:9.13-14
when scope checking A.X
